# mssh

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  bootstrap.sh  configure.ac  mssh.1  mssh.bash-completion  mssh.gconf.xml  mssh.schemas  mssh_clusters.conf
m4/: ChangeLog
po/: ChangeLog  Makefile.in.in  Makevars  POTFILES  POTFILES.in  es.gmo  es.po  mssh.pot
src/: Makefile.am  mssh-gconf.c  mssh-gconf.h  mssh-pref.c  mssh-pref.h  mssh-terminal.c  mssh-terminal.h  mssh-window.c  mssh-window.h  mssh.c
